feature/workspace_invitation added (update workspace role, search user email)
